force-app/main/default/objects/FinServ__FinancialAccount__c/fields/AccountNumberBackup__c.field-meta.xml
<CustomField>
    <fullName>AccountNumberBackup__c</fullName>
    <description>This is a temporary field that can be deleted when we are confident that the update of financial product account numbers from short to long Hubwise format has worked successfully. Cian created this field Oct 23.</description>
    <label>Account Number Backup</label>
    <length>11</length>
    <type>Text</type>
</CustomField>