force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Benefit_amount__c.field-meta.xml
<CustomField>
    <fullName>Benefit_amount__c</fullName>
    <label>Benefit amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>