force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Benefits_paid_on__c.field-meta.xml
<CustomField>
    <fullName>Benefits_paid_on__c</fullName>
    <label>Benefits paid on</label>
    <length>40</length>
    <type>Text</type>
</CustomField>