force-app/main/default/objects/FinServ__FinancialAccount__c/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <description>This field captures whether a financial product is pre-existing or new business and is used to control visibility and valuation source across the profile and dashboard.</description>
    <inlineHelpText>Only choose new business if this financial product was recommended by Nova.</inlineHelpText>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New business</fullName>
            </value>
            <value>
                <fullName>Pre-existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>