force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Capped_or_Flexi_Access__c.field-meta.xml
<CustomField>
    <fullName>Capped_or_Flexi_Access__c</fullName>
    <label>Capped or Flexi Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capped</fullName>
            </value>
            <value>
                <fullName>Flexi Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>