force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <inlineHelpText>Only used for Direct Equity Holdings</inlineHelpText>
    <label>Company Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>