force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Cover_Basis__c.field-meta.xml
<CustomField>
    <fullName>Cover_Basis__c</fullName>
    <label>Cover basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sum assured</fullName>
            </value>
            <value>
                <fullName>Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>