force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Create_LOA__c.field-meta.xml
<CustomField>
    <fullName>Create_LOA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, an LOA is created</description>
    <label>Create LOA</label>
    <type>Checkbox</type>
</CustomField>