force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Crystallised__c.field-meta.xml
<CustomField>
    <fullName>Crystallised__c</fullName>
    <label>Crystallised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>