force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Current_rate_of_return__c.field-meta.xml
<CustomField>
    <fullName>Current_rate_of_return__c</fullName>
    <label>Current rate of return</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>