force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Deferral_period_weeks__c.field-meta.xml
<CustomField>
    <fullName>Deferral_period_weeks__c</fullName>
    <label>Deferral period (weeks)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>