force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name__c</fullName>
    <description>The employer the pension is with</description>
    <label>Employer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>