force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FF_Session_ID__c.field-meta.xml
<CustomField>
    <fullName>FF_Session_ID__c</fullName>
    <description>Used in the Snapshot Flow to trigger a process builder update and store the Session ID</description>
    <label>FF Session ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>