force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FinancialProductType__c.field-meta.xml
<CustomField>
    <fullName>FinancialProductType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to type of product</description>
    <label>Financial Product Type</label>
    <referenceTo>FinancialProductType__c</referenceTo>
    <relationshipLabel>Financial Products</relationshipLabel>
    <relationshipName>Financial_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>