force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FinServ__ClosureReason__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ClosureReason__c</fullName>
    <description>Reason for closing the financial account.</description>
    <label>Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Move away from IM</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Account Maintenance Fees</fullName>
                <isActive>false</isActive>
                <label>Account Maintenance Fees</label>
            </value>
            <value>
                <fullName>Account no longer needed</fullName>
                <isActive>false</isActive>
                <label>Account no longer needed</label>
            </value>
            <value>
                <fullName>Hartley administration</fullName>
                <isActive>false</isActive>
                <label>Hartley administration</label>
            </value>
            <value>
                <fullName>Moved out of the country</fullName>
                <isActive>false</isActive>
                <label>Moved out of the country</label>
            </value>
            <value>
                <fullName>Not able to maintain account</fullName>
                <isActive>false</isActive>
                <label>Not able to maintain account</label>
            </value>
            <value>
                <fullName>OW recommendation - trustee</fullName>
                <isActive>false</isActive>
                <label>OW recommendation - trustee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>