force-app/main/default/objects/FinServ__FinancialAccount__c/fields/fixed_term__c.field-meta.xml
<CustomField>
    <fullName>fixed_term__c</fullName>
    <label>Fixed Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>