force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Fixed_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Term_End_Date__c</fullName>
    <label>Fixed Term End Date</label>
    <type>Date</type>
</CustomField>