force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FP_Commission_redirect_able__c.field-meta.xml
<CustomField>
    <fullName>FP_Commission_redirect_able__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commission redirect-able</label>
    <type>Checkbox</type>
</CustomField>