force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FP_Date_invested__c.field-meta.xml
<CustomField>
    <fullName>FP_Date_invested__c</fullName>
    <inlineHelpText>For the tax relief purposes</inlineHelpText>
    <label>Date invested</label>
    <type>Date</type>
</CustomField>