force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FP_Date_of_valuation__c.field-meta.xml
<CustomField>
    <fullName>FP_Date_of_valuation__c</fullName>
    <label>Date of valuation</label>
    <type>Date</type>
</CustomField>