force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FP_Details_of_commis__c.field-meta.xml
<CustomField>
    <fullName>FP_Details_of_commis__c</fullName>
    <label>Details of commission already paid</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>