force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FP_Held_in_trust__c.field-meta.xml
<CustomField>
    <fullName>FP_Held_in_trust__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Held in trust</label>
    <type>Checkbox</type>
</CustomField>