force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FP_In_drawdown__c.field-meta.xml
<CustomField>
    <fullName>FP_In_drawdown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In drawdown</label>
    <type>Checkbox</type>
</CustomField>