force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FP_ISA_allowance_Utilised__c.field-meta.xml
<CustomField>
    <fullName>FP_ISA_allowance_Utilised__c</fullName>
    <inlineHelpText>The amount of allowance that has been used by this product this tax year. 
This will reset to £0 at the start of each tax year.</inlineHelpText>
    <label>ISA allowance utilised</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>