force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FP_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>FP_Maturity_Date__c</fullName>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>