force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FP_Normal_retirement_date__c.field-meta.xml
<CustomField>
    <fullName>FP_Normal_retirement_date__c</fullName>
    <label>Normal retirement date</label>
    <type>Date</type>
</CustomField>