force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FP_Ongoing_charge_figure_OCF__c.field-meta.xml
<CustomField>
    <fullName>FP_Ongoing_charge_figure_OCF__c</fullName>
    <inlineHelpText>per annum</inlineHelpText>
    <label>Ongoing charge figure (OCF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>