force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FP_PCLS_entitlement__c.field-meta.xml
<CustomField>
    <fullName>FP_PCLS_entitlement__c</fullName>
    <label>PCLS entitlement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>