force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FP_Portal_link__c.field-meta.xml
<CustomField>
    <fullName>FP_Portal_link__c</fullName>
    <inlineHelpText>Links to the providers online portal</inlineHelpText>
    <label>Portal link</label>
    <type>Url</type>
</CustomField>