force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FP_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>FP_Provider_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Provider (LOA)</label>
    <referenceTo>Provider_Database__c</referenceTo>
    <relationshipLabel>Financial Product</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>