force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FP_Single_or_dual_index__c.field-meta.xml
<CustomField>
    <fullName>FP_Single_or_dual_index__c</fullName>
    <label>Single or dual index</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Dual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>