force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FP_Start_date__c.field-meta.xml
<CustomField>
    <fullName>FP_Start_date__c</fullName>
    <description>OW The date the product started/was opened.</description>
    <label>Start date</label>
    <type>Date</type>
</CustomField>