force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FP_Surrender_value__c.field-meta.xml
<CustomField>
    <fullName>FP_Surrender_value__c</fullName>
    <label>Surrender value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>