force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FP_Trust_or_insurance_based__c.field-meta.xml
<CustomField>
    <fullName>FP_Trust_or_insurance_based__c</fullName>
    <label>Trust or insurance based</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>