force-app/main/default/objects/FinServ__FinancialAccount__c/fields/FP_Value__c.field-meta.xml
<CustomField>
    <fullName>FP_Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>