force-app/main/default/objects/FinServ__FinancialAccount__c/fields/GroupCompany__c.field-meta.xml
<CustomField>
    <fullName>GroupCompany__c</fullName>
    <description>Indicates whether this product is provided by a provider who is marked as being a group company</description>
    <formula>Public_Provider_Name__r.OW_group_company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Company</label>
    <type>Checkbox</type>
</CustomField>