force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Primary Owner&#39;s household</inlineHelpText>
    <label>Household Lookup</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The account selected in the household field must be a household.

(Admin message: lookup filter criteria not met on Household on the financial product object)</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>IndustriesHousehold</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>