force-app/main/default/objects/FinServ__FinancialAccount__c/fields/HubwisePersonId__c.field-meta.xml
<CustomField>
    <fullName>HubwisePersonId__c</fullName>
    <description>Pulls the Hubwise person ID from the primary owner person account on to the financial product so that it can be used in the formula to produce the Hubwise Page button link on this object.</description>
    <formula>IF(ISBLANK(FinServ__PrimaryOwner__r.HubwisePersonId__c), &quot;NOT_SET&quot;, FinServ__PrimaryOwner__r.HubwisePersonId__c)</formula>
    <label>Hubwise Person ID</label>
    <type>Text</type>
</CustomField>