force-app/main/default/objects/FinServ__FinancialAccount__c/fields/In_Payment__c.field-meta.xml
<CustomField>
    <fullName>In_Payment__c</fullName>
    <inlineHelpText>Is the DB scheme in payment?</inlineHelpText>
    <label>In Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>