force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Income_of_Retirement_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Income_of_Retirement_Frequency__c</fullName>
    <label>Income of Retirement Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>