force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Initial_investment__c.field-meta.xml
<CustomField>
    <fullName>Initial_investment__c</fullName>
    <inlineHelpText>For the purpose of calculating tax relief</inlineHelpText>
    <label>Initial investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>