force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Initial_premium__c.field-meta.xml
<CustomField>
    <fullName>Initial_premium__c</fullName>
    <label>Initial premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>