force-app/main/default/objects/FinServ__FinancialAccount__c/fields/IntegrationSource__c.field-meta.xml
<CustomField>
    <fullName>IntegrationSource__c</fullName>
    <description>Tracks which external system the transaction, valuation etc. data comes from</description>
    <label>Integration source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hubwise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>