force-app/main/default/objects/FinServ__FinancialAccount__c/fields/IntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>IntegrationStatus__c</fullName>
    <description>To track the migration of valuations, transactions etc. automatically from the integration source.</description>
    <label>Integration status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valuations</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>