force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <description>Add information that you only want those at Octopus Wealth to see</description>
    <inlineHelpText>Information on this field is not visible on the client&#39;s portal</inlineHelpText>
    <label>Internal Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>