force-app/main/default/objects/FinServ__FinancialAccount__c/fields/IO_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>IO_Plan_ID__c</fullName>
    <description>Hold the IO Plan ID</description>
    <externalId>true</externalId>
    <label>IO Plan ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>