force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Kick_out_dates__c.field-meta.xml
<CustomField>
    <fullName>Kick_out_dates__c</fullName>
    <label>Kick out dates</label>
    <length>250</length>
    <type>Text</type>
</CustomField>