force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <inlineHelpText>Use the name of the provider</inlineHelpText>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>