force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Notice_Period_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period_Duration_Days__c</fullName>
    <description>For cash accounts and ISas</description>
    <label>Notice Period Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>