force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Ongoing_adviser_commision__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_adviser_commision__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this product is still paying ongoing to the designated adviser. Pre 2013 plans only.</inlineHelpText>
    <label>Ongoing adviser commission being paid</label>
    <type>Checkbox</type>
</CustomField>