force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Originating_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Originating_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Pre-LOA Record types. Attaches the Product to the Opportunity</description>
    <label>Originating Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Financial Products</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>