force-app/main/default/objects/FinServ__FinancialAccount__c/fields/OW_administrator__c.field-meta.xml
<CustomField>
    <fullName>OW_administrator__c</fullName>
    <description>For Octopus Wealth SIPPs, we need to capture the administrator.</description>
    <label>Administrator</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OW_custodian__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hartley</fullName>
            </value>
            <value>
                <fullName>Hubwise</fullName>
            </value>
            <value>
                <fullName>Intelligent Money</fullName>
            </value>
            <value>
                <fullName>Curtis Banks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>