force-app/main/default/objects/FinServ__FinancialAccount__c/fields/OW_administrator_account_number__c.field-meta.xml
<CustomField>
    <fullName>OW_administrator_account_number__c</fullName>
    <description>Where the administrator is different to the custodian, we will capture the account number they use here.</description>
    <inlineHelpText>Only populate if the administrator and custodian of a SIPP are different.</inlineHelpText>
    <label>Administrator account number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>