force-app/main/default/objects/FinServ__FinancialAccount__c/fields/OW_advice_charge_due_to_this_plan__c.field-meta.xml
<CustomField>
    <fullName>OW_advice_charge_due_to_this_plan__c</fullName>
    <label>NOVA advice charge due to this plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>