force-app/main/default/objects/FinServ__FinancialAccount__c/fields/OW_custodian__c.field-meta.xml
<CustomField>
    <fullName>OW_custodian__c</fullName>
    <description>The custodian for this financial product. This is captured for OW products that may be held on differnt platforms.</description>
    <label>Custodian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Curtis Banks</fullName>
            </value>
            <value>
                <fullName>Hubwise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>