force-app/main/default/objects/FinServ__FinancialAccount__c/fields/OW_external_ID__c.field-meta.xml
<CustomField>
    <fullName>OW_external_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>22</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>