force-app/main/default/objects/FinServ__FinancialAccount__c/fields/OW_Investment_Mandate__c.field-meta.xml
<CustomField>
    <fullName>OW_Investment_Mandate__c</fullName>
    <label>NOVA Investment Mandate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OW_Investment_Strategies</valueSetName>
    </valueSet>
</CustomField>