force-app/main/default/objects/FinServ__FinancialAccount__c/fields/OW_is_pension_employment__c.field-meta.xml
<CustomField>
    <fullName>OW_is_pension_employment__c</fullName>
    <description>Used to capture whether pensions are employer pensions or not. If they are, then the relevant employer can be provided.</description>
    <label>Is employer pension?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>