force-app/main/default/objects/FinServ__FinancialAccount__c/fields/OW_latest_update__c.field-meta.xml
<CustomField>
    <fullName>OW_latest_update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the employment record to the latest FF employment. This allows information about validation and profile visibility to be displayed on the employment record itself in the form of formula fields.</description>
    <label>Latest update</label>
    <referenceTo>FF_Financial_Product__c</referenceTo>
    <relationshipLabel>Financial Products</relationshipLabel>
    <relationshipName>Financial_Products</relationshipName>
    <type>Lookup</type>
</CustomField>