force-app/main/default/objects/FinServ__FinancialAccount__c/fields/OW_octopus_wealth_product__c.field-meta.xml
<CustomField>
    <fullName>OW_octopus_wealth_product__c</fullName>
    <label>Octopus Wealth product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Hubwise SIPP (Intelligent Money)</fullName>
            </value>
            <value>
                <fullName>Octopus Wealth GIA</fullName>
            </value>
            <value>
                <fullName>Octopus Wealth ISA</fullName>
            </value>
            <value>
                <fullName>Octopus Wealth SIPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>