force-app/main/default/objects/FinServ__FinancialAccount__c/fields/OW_own_product__c.field-meta.xml
<CustomField>
    <fullName>OW_own_product__c</fullName>
    <description>If the provider is one of our own companies, this will be true.</description>
    <formula>Public_Provider_Name__r.OW_own_company__c</formula>
    <label>Own product</label>
    <type>Checkbox</type>
</CustomField>