force-app/main/default/objects/FinServ__FinancialAccount__c/fields/OW_product_group__c.field-meta.xml
<CustomField>
    <fullName>OW_product_group__c</fullName>
    <description>The group to which this financial product belongs. Part of the taxonomy of product information we capture.</description>
    <label>Product group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Protection</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Uncategorised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>